--- a/infopulse_ui/src/assets/main.css
+++ b/infopulse_ui/src/assets/main.css
@@ -1,10 +1,1 @@
-@import './base.css';
-
-#app {
-  height: 100dvh;
-  width: 100dvw;
-  display: flex;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-}
+@import './base.css'
